--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.jar=${dist.dir}/ProbabiPfizer.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.controlsfx-11.1.0.jar=lib/controlsfx-11.1.0.jar
 file.reference.jfoenix-8.0.10.jar=lib/jfoenix-8.0.10.jar
 file.reference.mysql-connector-java-8.0.25.jar=lib/mysql-connector-java-8.0.25.jar
 includes=**
@@ -39,7 +40,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.mysql-connector-java-8.0.25.jar}:\
-    ${file.reference.jfoenix-8.0.10.jar}
+    ${file.reference.jfoenix-8.0.10.jar}:\
+    ${file.reference.controlsfx-11.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
